# gridtools_verification

./: .gitignore  CMakeLists.txt  README.md
cmake/: FindThreadsCudaFix.cmake  Packaging.cmake  gridtools_verification-config.cmake.in
cmake/modules/: FindSerialbox.cmake
libs/: CMakeLists.txt
libs/serialbox/src/serializer/: MetainfoSet.cpp
src/: Benchmark.h  CMakeLists.txt  Common.h  Core.h  VerificationException.h  benchmark.h  common.h  verification_exception.h
src/benchmark/: BenchmarkReporter.cpp  BenchmarkReporter.h  BenchmarkSpecification.cpp  BenchmarkSpecification.h  CacheFlusher.h  FieldInitializer.h  Timer.h  benchmark_reporter.cpp  benchmark_reporter.h  benchmark_specification.cpp  benchmark_specification.h  cache_flusher.h  field_initializer.h  timer.h
src/core/: Color.cpp  Color.h  CommandLine.cpp  CommandLine.h  Error.h  Logger.cpp  Logger.h  Serialization.cpp  Serialization.h  TypeErasedField.h  Utility.cpp  Utility.h  color.cpp  color.h  command_line.cpp  command_line.h  error.h  include_boost_format.h  logger.cpp  logger.h  serialization.cpp  serialization.h  type_erased_field.h  utility.cpp  utility.h
src/gridtools_verification/: common.h  core.h  verification_exception.h
src/gridtools_verification/core/: color.cpp  color.h  command_line.cpp  command_line.h  error.h  include_boost_format.h  logger.cpp  logger.h  serialization.h  type_erased_field.h  utility.cpp  utility.h
src/gridtools_verification/verification/: boundary_extent.h  error_metric.h  error_metric_interface.h  field_collection.h  main.h  unittest_environment.cpp  unittest_environment.h  verification.h  verification_reporter.cpp  verification_reporter.h  verification_result.h  verification_specification.cpp  verification_specification.h
src/verification/: BoundaryExtent.h  ErrorMetric.cpp  ErrorMetric.h  FieldCollection.cpp  FieldCollection.h  Verification.cpp  Verification.h  VerificationReporter.cpp  VerificationReporter.h  VerificationResult.h  VerificationSpecification.cpp  VerificationSpecification.h  boundary_extent.h  error_metric.cpp  error_metric.h  field_collection.cpp  field_collection.h  main.h  unittest_environment.cpp  unittest_environment.h  verification.cpp  verification.h  verification_reporter.cpp  verification_reporter.h  verification_result.h  verification_specification.cpp  verification_specification.h
tools/check_license/: check_license.sh
unittest/: CMakeLists.txt  SerializationUnittest.cpp  helper_dycore.h  test_serialization.cpp
unittest/benchmark/: CMakeLists.txt  test_FieldInitializer.cpp  test_field_initializer.cpp
unittest/core/: CMakeLists.txt  test_TypeErasedField.cpp  test_Utility.cpp  test_type_erased_field.cpp  test_utility.cpp
unittest/verification/: CMakeLists.txt  test_ErrorMetric.cpp  test_Verification.cpp  test_error_metric.cpp  test_verification.cpp  test_verification_specification.cpp
